--- a/angular-art-portfolio/src/app/toolbar/toolbar.component.css
+++ b/angular-art-portfolio/src/app/toolbar/toolbar.component.css
@@ -3,14 +3,9 @@
 }
 
 .material-icons {
-    color: rgb(67, 216, 253);
-}
-
-mat-icon-button {
-    color: green;
-    background-color: blue;
+    color: #ccbdda;
 }
 
 mat-toolbar {
-    background-color: pink;
+    background-color: white;
 }
