dashboard component and styling changes

--- a/angular-art-portfolio/src/app/toolbar/toolbar.component.html
+++ b/angular-art-portfolio/src/app/toolbar/toolbar.component.html
@@ -1,10 +1,12 @@
 <mat-toolbar>
-    <button mat-icon-button aria-label="Example icon button with a home icon">
-        <mat-icon>home</mat-icon>
+    <button mat-icon-button aria-label="menu">
+        <mat-icon>menu</mat-icon>
       </button>
+
+    <span class="spacer"></span>
     <span>Art by Andrea</span>
-    <span class="example-spacer"></span>
-    <button mat-icon-button color="green" aria-label="Example icon-button with heart icon">
-      <mat-icon>favorite</mat-icon>
+    <span class="spacer"></span>
+    <button mat-icon-button aria-label="home">
+      <mat-icon>home</mat-icon>
     </button>
 </mat-toolbar>
