--- a/angular-art-portfolio/src/app/app.component.css
+++ b/angular-art-portfolio/src/app/app.component.css
@@ -1,3 +1,10 @@
 h1 {
     font-family: 'Caveat Brush', sans-serif;
 }
+
+.centered {
+    display: flex;
+    justify-content: center;
+    width: 90%;
+    height: 100%;
+}
