--- a/angular-art-portfolio/src/styles.css
+++ b/angular-art-portfolio/src/styles.css
@@ -3,9 +3,9 @@
 @import '@angular/material/prebuilt-themes/deeppurple-amber.css';
 html,
 body {
-    height: 100%;
     font-family: Roboto, "Helvetica Neue", sans-serif;
-    background-color: #dccaec;
+    height: 100%;
+    width: 100%;
 }
 
 .mat-typography {
