front end display heiarchy

--- a/angular-art-portfolio/src/app/toolbar/toolbar.component.html
+++ b/angular-art-portfolio/src/app/toolbar/toolbar.component.html
@@ -6,7 +6,9 @@
     <span class="spacer"></span>
     <span>Art by Andrea</span>
     <span class="spacer"></span>
-    <button mat-icon-button aria-label="home">
-      <mat-icon>home</mat-icon>
+    <a routerLink="/dashboard">
+        <button mat-icon-button aria-label="home">
+      <mat-icon >home</mat-icon>
     </button>
+    </a>
 </mat-toolbar>
