--- a/angular-art-portfolio/src/app/image-display/image-display.component.html
+++ b/angular-art-portfolio/src/app/image-display/image-display.component.html
@@ -1,1 +1,17 @@
-<p>image-display works!</p>
+<mat-card class="card">
+    <mat-card-header>
+        <div mat-card-avatar class="header-image"></div>
+        <mat-card-title>{{image.name}}</mat-card-title>
+        <mat-card-subtitle>{{image.category}}</mat-card-subtitle>
+    </mat-card-header>
+    <img mat-card-image src="{{image.path}}" alt="{{image.name}}">
+    <mat-card-content>
+        <p>
+            {{image.description}}
+        </p>
+    </mat-card-content>
+    <mat-card-actions>
+        <button mat-button>LIKE</button>
+        <button mat-button>SHARE</button>
+    </mat-card-actions>
+</mat-card>
