debugging, finished for the night

--- a/angular-art-portfolio/src/app/dashboard/dashboard.component.html
+++ b/angular-art-portfolio/src/app/dashboard/dashboard.component.html
@@ -1,6 +1,9 @@
 <div class="dashboard">
     <h1>Home</h1>
     <div>
-        test
+
+        <nav>
+            <a routerLink="/images">Images</a>
+        </nav>
     </div>
 </div>
