--- a/angular-art-portfolio/src/app/image-display/image-display.component.html
+++ b/angular-art-portfolio/src/app/image-display/image-display.component.html
@@ -1,4 +1,4 @@
-<mat-card class="card">
+<!-- <mat-card class="card">
     <mat-card-header>
         <div mat-card-avatar class="header-image"></div>
         <mat-card-title>{{image.name}}</mat-card-title>
@@ -14,4 +14,8 @@
         <button mat-button>LIKE</button>
         <button mat-button>SHARE</button>
     </mat-card-actions>
-</mat-card>
+</mat-card> 
+
+^ to be implemented once i know that im actually able to serve images
+-->
+<img src="{{image.path}}">
