--- a/angular-art-portfolio/src/app/display-all-images/display-all-images.component.html
+++ b/angular-art-portfolio/src/app/display-all-images/display-all-images.component.html
@@ -1,5 +1,5 @@
-<ul class="images">
-    <li *ngFor="let image of images">
+<div class="images">
+    <div *ngFor="let image of images">
         <app-image-display [image]="image"></app-image-display>
-    </li>
-</ul>
+    </div>
+</div>
