added more images and a new profile picture

--- a/angular-art-portfolio/src/app/display-all-images/display-all-images.component.css
+++ b/angular-art-portfolio/src/app/display-all-images/display-all-images.component.css
@@ -1,4 +1,6 @@
     .images {
-        justify-content: center;
-        display: flex;
+        margin-left: 100px;
+        margin-right: 100px;
+        height: 100%;
+        width: 100%;
     }
