--- a/angular-art-portfolio/src/app/display-all-images/display-all-images.component.html
+++ b/angular-art-portfolio/src/app/display-all-images/display-all-images.component.html
@@ -1,5 +1,7 @@
 <div class="images">
     <div *ngFor="let image of images">
+        <span>
         <app-image-display [image]="image"></app-image-display>
+    </span>
     </div>
 </div>
