--- a/angular-art-portfolio/src/app/image-display/image-display.component.html
+++ b/angular-art-portfolio/src/app/image-display/image-display.component.html
@@ -13,5 +13,6 @@
     <mat-card-actions>
         <button mat-button>LIKE</button>
         <button mat-button>SHARE</button>
+        <button mat-button>Request License</button>
     </mat-card-actions>
 </mat-card>
