started request endpoints

--- a/angular-art-portfolio/src/app/dashboard/dashboard.component.html
+++ b/angular-art-portfolio/src/app/dashboard/dashboard.component.html
@@ -1,9 +1,11 @@
 <div class="dashboard">
     <h1>Home</h1>
-    <div>
-
+    <span></span>
+    <div class="break">
         <nav>
-            <a routerLink="/images">Images</a>
+            <a routerLink="/images">
+                <button mat-raised-button>See All Images</button>
+            </a>
         </nav>
     </div>
 </div>
