--- a/angular-art-portfolio/src/app/image-display/image-display.component.html
+++ b/angular-art-portfolio/src/app/image-display/image-display.component.html
@@ -13,6 +13,8 @@
     <mat-card-actions>
         <button mat-button>LIKE</button>
         <button mat-button>SHARE</button>
-        <button mat-button>Request License</button>
+        <a routerLink="/license">
+            <button mat-button>Request License</button>
+        </a>
     </mat-card-actions>
 </mat-card>
