--- a/angular-art-portfolio/src/app/dashboard/dashboard.component.css
+++ b/angular-art-portfolio/src/app/dashboard/dashboard.component.css
@@ -1,9 +1,13 @@
 .dashboard {
-    display: flex;
     margin-left: 100px;
     margin-right: 100px;
     height: 100%;
     width: 100%;
-    background-color: rgb(144, 144, 241);
     justify-content: center;
+}
+
+h1 {
+    width: 90%;
+    justify-content: center;
+    display: flex;
 }
