dashboard page refactoring

--- a/angular-art-portfolio/src/app/dashboard/dashboard.component.html
+++ b/angular-art-portfolio/src/app/dashboard/dashboard.component.html
@@ -6,6 +6,9 @@
             <a routerLink="/images">
                 <button mat-raised-button>See All Images</button>
             </a>
+            <a routerLink="/request">
+                <button mat-raised-button>Request License</button>
+            </a>
         </nav>
     </div>
 </div>
