--- a/angular-art-portfolio/src/app/license-request/license-request.component.html
+++ b/angular-art-portfolio/src/app/license-request/license-request.component.html
@@ -7,21 +7,26 @@
     <br>
     <mat-form-field appearance="outline">
         <mat-label>email</mat-label>
-        <input matInput>email
+        <input matInput>Email
     </mat-form-field>
     <br>
     <mat-form-field appearance="outline">
         <mat-label>Select</mat-label>
-        <mat-select>
-            <mat-option value="Business">Business</mat-option>
-            <mat-option value="Personal">Personal</mat-option>
-        </mat-select>
+        <select>
+            <option value="Business">Business</option>
+            <option value="Personal">Personal</option>
+        </select> <br>Usage
     </mat-form-field>
     <br>
     <mat-form-field appearance="outline">
         <mat-label>Usage description:</mat-label>
-        <textarea matInput>describe your request</textarea>
+        <textarea matInput>describe your request</textarea> Description
     </mat-form-field>
+
+
+    <div class="break"></div>
     <br>
     <button mat-button-raised>Submit Request</button>
+    <div class="break"></div>
+    <p> </p>
 </div>
