--- a/angular-art-portfolio/src/app/dashboard/dashboard.component.html
+++ b/angular-art-portfolio/src/app/dashboard/dashboard.component.html
@@ -2,12 +2,12 @@
     <h1>Home</h1>
     <span></span>
     <div class="break">
-        <nav>
+        <nav class="navigation">
             <a routerLink="/images">
-                <button mat-raised-button>See All Images</button>
+                <button class="dashbutton" mat-raised-button>See All Images</button>
             </a>
-            <a routerLink="/request">
-                <button mat-raised-button>Request License</button>
+            <a routerLink="/license">
+                <button class="dashbutton" mat-raised-button>Request License</button>
             </a>
         </nav>
     </div>
