--- a/angular-art-portfolio/src/app/toolbar/toolbar.component.html
+++ b/angular-art-portfolio/src/app/toolbar/toolbar.component.html
@@ -4,7 +4,7 @@
       </button>
 
     <span class="spacer "></span>
-    <span>Art by Andrea</span>
+    <span class="title">Art by Andrea</span>
     <span class="spacer "></span>
     <a routerLink="/dashboard">
         <button mat-icon-button aria-label="home ">
