--- a/angular-art-portfolio/src/app/image-display/image-display.component.html
+++ b/angular-art-portfolio/src/app/image-display/image-display.component.html
@@ -13,7 +13,7 @@
     <mat-card-actions>
         <button mat-button>LIKE</button>
         <button mat-button>SHARE</button>
-        <a routerLink="/license">
+        <a routerLink="/license/{{image.id}}">
             <button mat-button>Request License</button>
         </a>
     </mat-card-actions>
