--- a/angular-art-portfolio/src/app/dashboard/dashboard.component.html
+++ b/angular-art-portfolio/src/app/dashboard/dashboard.component.html
@@ -6,8 +6,15 @@
             <a routerLink="/images">
                 <button class="dashbutton" mat-raised-button>See All Images</button>
             </a>
-            <a routerLink="/license">
-                <button class="dashbutton" mat-raised-button>Request License</button>
+            <a routerLink="/search">
+                <button class="dashbutton" mat-raised-button>Search Images</button>
+            </a>
+            <a routerLink="/contact">
+                <button class="dashbutton" mat-raised-button>Contact Me</button>
+            </a>
+
+            <a routerLink="/commission">
+                <button class="dashbutton" mat-raised-button>Request a Commission</button>
             </a>
         </nav>
     </div>
