--- a/angular-art-portfolio/src/app/license-request/license-request.component.css
+++ b/angular-art-portfolio/src/app/license-request/license-request.component.css
@@ -4,9 +4,23 @@
     margin-bottom: 20px;
 }
 
+h1 {
+    display: flex;
+    justify-content: center;
+    margin-left: 25%;
+}
+
 .container {
     background-color: white;
-    width: fit-content;
+    width: 100%;
     height: auto;
     margin-bottom: 15px;
+    margin-left: 15%;
+}
+
+input,
+select {
+    margin-top: 10px;
+    margin-bottom: 20px;
+    margin-right: 5px;
 }
