route restructuring, proper image by id

--- a/angular-art-portfolio/src/app/commission/commission.component.html
+++ b/angular-art-portfolio/src/app/commission/commission.component.html
@@ -1,1 +1,28 @@
-<p>commission works!</p>
+<div id="commission">
+    <div class="component">
+        <h1>Request License</h1>
+        <div class="container">
+
+            <input matInput #name> Name
+            <br>
+
+
+            <input matInput #email>Email
+            <br>
+            <br>
+
+
+            <p>the hourly rate for a commission is $20 per hour spent with a minimum cost of $40</p>
+            <textarea matInput #description>describe your commission</textarea> Description
+            <div class="break"></div>
+            <br>
+            <button mat-button-raised>Submit Request</button>
+            <div class="break"></div>
+            <p> </p>
+        </div>
+    </div>
+
+
+
+
+</div>
