--- a/angular-art-portfolio/src/app/contact-info/contact-info.component.html
+++ b/angular-art-portfolio/src/app/contact-info/contact-info.component.html
@@ -1,1 +1,8 @@
-<p>contact-info works!</p>
+<div class="contact">
+    <h1>Contact Information</h1>
+    <div>
+        <p>For business inquiries: AndreaSmylie@yahoo.com</p>
+
+        <p>Website design: github.com/eliotdoesprogramming</p>
+    </div>
+</div>
