--- a/angular-art-portfolio/src/app/search/search.component.html
+++ b/angular-art-portfolio/src/app/search/search.component.html
@@ -1,1 +1,14 @@
-<p>search works!</p>
+<div id="search-component">
+    <h4>
+        <label for="search-box">Image Search  </label>
+        <input #searchBox id="search-box" />
+        <button id="but" mat-raised-button (click)="enter(searchBox.value)">search</button>
+        <ul class="search-result">
+            <li *ngFor="let image of myImage">
+                <a routerLink="/images/{{image.id}}">
+                {{image.name}}
+              </a>
+            </li>
+        </ul>
+    </h4>
+</div>
