admin service to interact with rest controllers

--- a/angular-art-portfolio/src/app/admin-dashboard/admin-dashboard.component.css
+++ b/angular-art-portfolio/src/app/admin-dashboard/admin-dashboard.component.css
@@ -1,6 +1,8 @@
 .dashbutton {
     background-color: rgba(180, 77, 228, 0.479);
     margin-bottom: 5%;
-    width: 35%;
+    margin-left: 5%;
+    margin-right: 5%;
+    width: 30%;
     justify-content: center;
 }
