working front to back all license view + grant

--- a/angular-art-portfolio/src/app/admin-dashboard/admin-dashboard.component.html
+++ b/angular-art-portfolio/src/app/admin-dashboard/admin-dashboard.component.html
@@ -4,7 +4,7 @@
     <div class="break">
         <nav class="navigation">
 
-            <a routerLink="/">
+            <a routerLink="/admin/all-lrq">
                 <button class="dashbutton" mat-raised-button>View All License Requests</button>
             </a>
             <a routerLink="/">
