Working Pending License Requests

--- a/angular-art-portfolio/src/app/admin-dashboard/admin-dashboard.component.html
+++ b/angular-art-portfolio/src/app/admin-dashboard/admin-dashboard.component.html
@@ -7,7 +7,7 @@
             <a routerLink="/admin/all-lrq">
                 <button class="dashbutton" mat-raised-button>View All License Requests</button>
             </a>
-            <a routerLink="/">
+            <a routerLink="/admin/pending-lrq">
                 <button class="dashbutton" mat-raised-button>View Pending License Requests</button>
             </a>
             <a routerLink="/">
