refactored update request, working front to back.

--- a/angular-art-portfolio/src/app/admin-dashboard/admin-dashboard.component.html
+++ b/angular-art-portfolio/src/app/admin-dashboard/admin-dashboard.component.html
@@ -10,14 +10,10 @@
             <a routerLink="/admin/pending-lrq">
                 <button class="dashbutton" mat-raised-button>View Pending License Requests</button>
             </a>
-            <a routerLink="/">
+            <a routerLink="/admin/all-comm">
                 <button class="dashbutton" mat-raised-button>View all Commission Requests</button>
             </a>
-
-            <a routerLink="/">
-                <button class="dashbutton" mat-raised-button>Update Commission</button>
-            </a>
-            <a routerLink="/">
+            <a routerLink="/admin/pending-comm">
                 <button class="dashbutton" mat-raised-button>View Pending Commission Requests</button>
             </a>
         </nav>
