added pending commissions

--- a/angular-art-portfolio/src/app/pending-commission-view/pending-commission-view.component.html
+++ b/angular-art-portfolio/src/app/pending-commission-view/pending-commission-view.component.html
@@ -1,1 +1,4 @@
-<p>pending-commission-view works!</p>
+<h1>Pending Commissions</h1>
+<div *ngFor="let comm of commissions">
+    <app-commission-view [comm]="comm"></app-commission-view>
+</div>
