--- a/angular-art-portfolio/src/app/all-commission-view/all-commission-view.component.html
+++ b/angular-art-portfolio/src/app/all-commission-view/all-commission-view.component.html
@@ -1,4 +1,4 @@
-<p>all-commission-view works!</p>
+<h1>All Commissions</h1>
 <div *ngFor="let comm of commissions">
     <app-commission-view [comm]="comm"></app-commission-view>
 </div>
