lots of styling

--- a/angular-art-portfolio/src/app/all-license-viewer/all-license-viewer.component.html
+++ b/angular-art-portfolio/src/app/all-license-viewer/all-license-viewer.component.html
@@ -1,4 +1,6 @@
-<h1>All License Request</h1>
-<div *ngFor="let license of licenses">
-    <app-license-display [license]="license"></app-license-display>
+<div class="component">
+    <h1>All License Requests</h1>
+    <div *ngFor="let license of licenses">
+        <app-license-display [license]="license"></app-license-display>
+    </div>
 </div>
