--- a/angular-art-portfolio/src/app/pendinglrq-viewer/pendinglrq-viewer.component.html
+++ b/angular-art-portfolio/src/app/pendinglrq-viewer/pendinglrq-viewer.component.html
@@ -1,5 +1,6 @@
-<h1>Pending License Requests</h1>
-
-<div *ngFor="let license of pendinglrq">
-    <app-license-display [license]="license"></app-license-display>
+<div class="component">
+    <h1>Pending License Requests</h1>
+    <div *ngFor="let license of pendinglrq">
+        <app-license-display [license]="license"></app-license-display>
+    </div>
 </div>
