--- a/angular-art-portfolio/src/app/admin-dashboard/admin-dashboard.component.css
+++ b/angular-art-portfolio/src/app/admin-dashboard/admin-dashboard.component.css
@@ -1,8 +1,33 @@
+.dashboard {
+    margin-left: 100px;
+    margin-right: 100px;
+    height: 100%;
+    width: 100%;
+    justify-content: center;
+}
+
+a {
+    margin: 5% 5% 5% 5%;
+}
+
+h1 {
+    width: 90%;
+    justify-content: center;
+    display: flex;
+    margin-left: 3%;
+}
+
+.navigation {
+    justify-content: center;
+    margin-left: 10%;
+    margin-right: 10%;
+}
+
 .dashbutton {
     background-color: rgba(180, 77, 228, 0.479);
     margin-bottom: 5%;
     margin-left: 5%;
-    margin-right: 5%;
+    margin-right: 1%;
     width: 30%;
     justify-content: center;
 }
