--- a/angular-art-portfolio/src/app/commission-view/commission-view.component.css
+++ b/angular-art-portfolio/src/app/commission-view/commission-view.component.css
@@ -9,8 +9,10 @@ span {
 }
 
 button {
+    justify-content: center;
     font-size: 10px;
     height: 25px;
+    width: 35px;
     width: fit-content;
 }
 
