--- a/angular-art-portfolio/src/app/commission/commission.component.html
+++ b/angular-art-portfolio/src/app/commission/commission.component.html
@@ -12,7 +12,8 @@
             <br>
 
 
-            <p>the hourly rate for a commission is $20 per hour spent with a minimum cost of $40</p>
+            <p class="rate">the hourly rate for a commission is $20 per hour </p>
+            <p> with a minimum cost of $40</p>
             <textarea matInput #description>describe your commission</textarea> Description
             <div class="break"></div>
             <br>
