--- a/angular-art-portfolio/src/app/commission/commission.component.css
+++ b/angular-art-portfolio/src/app/commission/commission.component.css
@@ -4,6 +4,15 @@
     margin-bottom: 20px;
 }
 
+.component {
+    padding: 5px;
+    padding-bottom: 10px;
+}
+
+.rate {
+    word-wrap: normal;
+}
+
 h1 {
     display: flex;
     justify-content: center;
@@ -19,10 +28,19 @@ h1 {
     justify-content: center;
 }
 
-p,
+p {
+    font-size: 10px;
+    padding: 0px;
+    margin: 0px;
+}
+
 textarea {
     font-size: 10px;
     display: flex;
+}
+
+button {
+    margin-bottom: 10px;
 }
 
 input,
