--- a/angular-art-portfolio/src/app/license-request/license-request.component.css
+++ b/angular-art-portfolio/src/app/license-request/license-request.component.css
@@ -1,11 +1,11 @@
-@import "~@angular/material/prebuilt-themes/indigo-pink.css";
-.example-container .mat-form-field+.mat-form-field {
-    margin-left: 8px;
-    margin-bottom: 20px;
+.component {
+    width: 100%;
+    margin-left: 800px;
+    padding-left: 100px;
+    justify-content: center;
 }
 
 h1 {
-    display: flex;
     justify-content: center;
     margin-left: 25%;
 }
