--- a/angular-art-portfolio/src/app/image-display/image-display.component.css
+++ b/angular-art-portfolio/src/app/image-display/image-display.component.css
@@ -2,6 +2,7 @@
     justify-content: center;
     width: 95%;
     margin-bottom: 5%;
+    margin-left: 3%;
 }
 
 .header-image {
@@ -13,3 +14,5 @@
 .liked {
     background-color: pink;
 }
+
+img {}
