--- a/angular-art-portfolio/src/app/toolbar/toolbar.component.html
+++ b/angular-art-portfolio/src/app/toolbar/toolbar.component.html
@@ -1,3 +1,7 @@
+<!-- legacy toolbar component, revert back if sidenav combo is problematic -->
+
+
+
 <mat-toolbar>
     <button mat-icon-button aria-label=" menu ">
         <mat-icon>menu</mat-icon>
