added granted license view, refactored grant license data structure

--- a/angular-art-portfolio/src/app/admin-dashboard/admin-dashboard.component.html
+++ b/angular-art-portfolio/src/app/admin-dashboard/admin-dashboard.component.html
@@ -16,6 +16,10 @@
             <a routerLink="/admin/pending-comm">
                 <button class="dashbutton" mat-raised-button>View Pending Commission Requests</button>
             </a>
+            <a routerLink="/admin/granted">
+                <button class="dashbutton" mat-raised-button>View Granted Licenses</button>
+            </a>
+
         </nav>
     </div>
 </div>
