--- a/angular-art-portfolio/src/app/admin-dashboard/admin-dashboard.component.html
+++ b/angular-art-portfolio/src/app/admin-dashboard/admin-dashboard.component.html
@@ -14,7 +14,7 @@
                 <button class="dashbutton" mat-raised-button>View all Commission Requests</button>
             </a>
             <a routerLink="/admin/pending-comm">
-                <button class="dashbutton" mat-raised-button>View Pending Commission Requests</button>
+                <button class="dashbutton" mat-raised-button>View Pending Commissions</button>
             </a>
             <a routerLink="/admin/granted">
                 <button class="dashbutton" mat-raised-button>View Granted Licenses</button>
