--- a/angular-art-portfolio/src/app/commission/commission.component.css
+++ b/angular-art-portfolio/src/app/commission/commission.component.css
@@ -4,9 +4,13 @@
     margin-bottom: 20px;
 }
 
+.commission {
+    margin-left: 20%;
+    width: 120%;
+}
+
 .component {
-    padding: 5px;
-    padding-bottom: 10px;
+    width: 100%;
 }
 
 .rate {
@@ -16,7 +20,7 @@
 h1 {
     display: flex;
     justify-content: center;
-    margin-left: 25%;
+    margin-left: 35%;
 }
 
 .container {
@@ -36,7 +40,7 @@ p {
 
 textarea {
     font-size: 10px;
-    display: flex;
+    width: 100%;
 }
 
 button {
