--- a/angular-art-portfolio/src/app/commission/commission.component.html
+++ b/angular-art-portfolio/src/app/commission/commission.component.html
@@ -1,6 +1,6 @@
-<div id="commission">
+<div class="commission">
     <div class="component">
-        <h1>Request License</h1>
+        <h1>Request Commission</h1>
         <div class="container">
 
             <input matInput #name> Name
