--- a/angular-art-portfolio/src/app/license-request/license-request.component.css
+++ b/angular-art-portfolio/src/app/license-request/license-request.component.css
@@ -1,6 +1,6 @@
 .component {
     width: 100%;
-    margin-left: 800px;
+    margin-left: 0px;
     padding-left: 100px;
     justify-content: center;
 }
@@ -16,6 +16,10 @@ h1 {
     height: auto;
     margin-bottom: 15px;
     margin-left: 15%;
+}
+
+textarea {
+    width: 100%;
 }
 
 input,
