--- a/angular-art-portfolio/src/app/app.component.html
+++ b/angular-art-portfolio/src/app/app.component.html
@@ -20,7 +20,12 @@
         <br>
         <br>
         <br>
+        <a class="sidetxt" routerLink="/contact">Contact</a>
+        <br>
+        <br>
+        <br>
         <a class="sidetxt" routerLink="/admin">Admin</a>
+
     </mat-sidenav>
     <mat-sidenav-content>
         <mat-toolbar>
