--- a/angular-art-portfolio/src/app/dashboard/dashboard.component.css
+++ b/angular-art-portfolio/src/app/dashboard/dashboard.component.css
@@ -1,6 +1,6 @@
 .dashboard {
-    margin-left: 100px;
-    margin-right: 100px;
+    margin-left: auto;
+    margin-right: auto;
     height: 100%;
     width: 100%;
     justify-content: center;
