--- a/angular-art-portfolio/src/app/image-display/image-display.component.html
+++ b/angular-art-portfolio/src/app/image-display/image-display.component.html
@@ -4,7 +4,7 @@
         <mat-card-title>{{image.name}}</mat-card-title>
         <mat-card-subtitle>{{image.category}}</mat-card-subtitle>
     </mat-card-header>
-    <img mat-card-image src="{{image.path}}" alt="{{image.name}}">
+    <div style="text-align: center;"><img mat-card-image id="artPiece" src="{{image.path}}" alt="{{image.name}}"></div>
     <mat-card-content>
         <p>
             {{image.description}}
